kubernetes/application_manifests/brave_browser.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: brave
---
apiVersion: v1
kind: Service
metadata:
  name: brave
  namespace: brave
spec:
  type: NodePort
  selector:
    app: brave
  ports:
    - port: 3000
      targetPort: 3000
      name: brave-http
    - port: 3001
      targetPort: 3001
      name: brave-https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brave
  namespace: brave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: brave
  template:
    metadata:
      labels:
        app: brave
    spec:
      containers:
        - name: brave
          image: lscr.io/linuxserver/brave:latest
          ports:
            - containerPort: 3000
            - containerPort: 3001
          volumeMounts:
            - name: brave-config
              mountPath: /config
      volumes:
        - name: brave-config
          persistentVolumeClaim:
            claimName: brave-config
