kubernetes/application_manifests/firefox.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefox
  namespace: ctnr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefox
  template:
    metadata:
      labels:
        app: firefox
    spec:
      containers:
        - name: firefox
          image: lscr.io/linuxserver/firefox:latest
          ports:
            - containerPort: 3000
            - containerPort: 3001
          volumeMounts:
            - name: firefox-config
              mountPath: /config
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: firefox-config
          persistentVolumeClaim:
            claimName: firefox-config-pvc
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: firefox
  namespace: ctnr
spec:
  selector:
    app: firefox
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: http-alt
      port: 3001
      targetPort: 3001
